[package]
name = "thread-tracker"
version = "0.9.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = { version = "0.9.0", features = ["serde"] }
poise = "0.6.1"
postgres = "0.19.8"
rand = "0.8.5"
regex = "1.10.5"
serde = "1.0.204"
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "temp_cache"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-rustls", "postgres"] }
thiserror = "1.0.63"
time = "0.3.36"
timer = "0.2.0"
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.16"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
