[package]
name = "thread-tracker"
version = "0.10.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
poise = "0.6.1"
postgres = "0.19.11"
rand = "0.9.2"
regex = "1.10.5"
serde = "1.0.204"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "temp_cache"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres"] }
thiserror = "2.0.16"
time = "0.3.36"
timer = "0.2.0"
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.9.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
